--- a/content/練習2.html
+++ b/content/練習2.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,186 +142,327 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>W11-12</h1>
+    <div id="tipue_search_content">課程2 << <a href='課程2.html'>Previous</a> <a href='期末總結.html'>Next</a> >> 期末總結<br /><h1>練習2</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
-
-// Declare the rotation function
-void rotateFilledPolygon(int x_orig, int y_orig, double rotation_ang, gdPoint *points, int num_points) {
-    int i;
-    double angle_rad = rotation_ang * M_PI / 180.0;
-
-    for (i = 0; i &lt; num_points; i++) {
-        int x = points[i].x - x_orig;
-        int y = points[i].y - y_orig;
-
-        points[i].x = x_orig + (int)(x * cos(angle_rad) - y * sin(angle_rad));
-        points[i].y = y_orig + (int)(x * sin(angle_rad) + y * cos(angle_rad));
-    }
-}
 
 int main() {
-    // Image dimensions
-    int width = 800;
-    int height = 600;
+    int x;    // 用於存儲總里程的變數，以公里為單位
+    float y;  // 用於存儲總耗油量的變數，以升為單位
 
-    // Create a true-color image
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
-
-    // Open the output file
-    FILE *outputFile = fopen("hellogd1.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
+    // 提示用戶輸入總里程並存入 'x'
+    printf("Input total distance in km: ");
+    // 檢查 scanf 的返回值，確保成功讀取一個整數
+    if (scanf("%d", &amp;x) != 1) {
+        fprintf(stderr, "Error: Invalid input for total distance.\n");
         return 1;
     }
 
-    // Define color indices
-    int red = gdImageColorAllocate(img, 255, 0, 0);
-    int blue = gdImageColorAllocate(img, 0, 0, 255);
-    int black = gdImageColorAllocate(img, 0, 0, 0);
-    int white = gdImageColorAllocate(img, 255, 255, 255);
+    // 提示用戶輸入總耗油量並存入 'y'
+    printf("Input total fuel spent in liters: ");
+    // 檢查 scanf 的返回值，確保成功讀取一個浮點數
+    if (scanf("%f", &amp;y) != 1) {
+        fprintf(stderr, "Error: Invalid input for total fuel spent.\n");
+        return 1;
+    }
 
-    // Draw filled rectangles, ellipse, line, and polygons
-    gdImageFilledRectangle(img, 0, 0, width, height, white);
-    gdImageFilledRectangle(img, 0, 0, (int)width / 4, (int)height / 4, blue);
-
-    gdImageFilledEllipse(img, (int)width * 3 / 4, (int)height / 4, (int)width / 4, (int)width / 4, red);
-    gdImageEllipse(img, (int)width * 3 / 4, (int)height * 3 / 4, (int)width / 4, (int)width / 4, red);
-    gdImageLine(img, (int)width / 2, (int)height / 2, (int)width / 2, (int)height / 2 + 100, blue);
-
-    gdPoint points[4] = {
-        { (int)width / 4, (int)height * 3 / 4 },
-        { (int)width / 4 + 100, (int)height * 3 / 4 },
-        { (int)width / 4 + 100, (int)height * 3 / 4 + 100 },
-        { (int)width / 4, (int)height * 3 / 4 + 100 }
-    };
-
-    // Call the rotation function for the first polygon
-    rotateFilledPolygon((int)width / 4 + 50, (int)height * 3 / 4 + 50, 45.0, points, 4);
-    gdImagePolygon(img, points, 4, black);
-
-    gdPoint points2[4] = {
-        { (int)width / 3, (int)height / 2 },
-        { (int)width / 3 + 100, (int)height / 2 },
-        { (int)width / 3 + 100, (int)height / 2 + 100 },
-        { (int)width / 3 - 50, (int)height / 2 + 100 }
-    };
-
-    // Call the rotation function for the second polygon
-    rotateFilledPolygon((int)width / 3 + 50, (int)height / 2 + 50, 30.0, points2, 4);
-    gdImageFilledPolygon(img, points2, 4, red);
-
-    // Save the image to the output file
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-
-    // Free the memory used by the image
-    gdImageDestroy(img);
+    // 計算並打印平均油耗
+    printf("Average consumption (km/lt) %.3f ", x / y);
+    printf("\n");
 
     return 0;
 }
 </pre>
-<p><span style="vertical-align: inherit;"><br/><img alt="" height="300" src="./../images/hellogd.png" width="400"/></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">先設定hello.c的檔</span></span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"></pre>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">  #include &lt;stdio.h&gt;
-
-int main()
-{
-    printf("hello world\n");
-}</pre>
-<h4><br/><br/><br/></h4>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後再shell打cc hello.c會出現這個</span></span></p>
-<p><img alt="" height="257" src="./../images/螢幕擷取畫面 2023-12-21 022524.png" width="400"/></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後要回車這樣replit就會幫我準備好c</span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">之後再進行一次程式</span></span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">cc hello.c，然後打./a.out</span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後就會出現hello world</span></span></p>
+<p><img alt="" height="132" src="./../images/螢幕擷取畫面 2023-12-26 205545.png" width="522"/></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
-
-// Declare the rotation function
-void rotateFilledPolygon(int x_orig, int y_orig, double rotation_ang, gdPoint *points, int num_points) {
-    int i;
-    double angle_rad = rotation_ang * M_PI / 180.0;
-
-    for (i = 0; i &lt; num_points; i++) {
-        int x = points[i].x - x_orig;
-        int y = points[i].y - y_orig;
-
-        points[i].x = x_orig + (int)(x * cos(angle_rad) - y * sin(angle_rad));
-        points[i].y = y_orig + (int)(x * sin(angle_rad) + y * cos(angle_rad));
-    }
-}
 
 int main() {
-    int width = 800;
-    int height = 600;
+    float x, y, z, P; // 宣告變數，用於存儲三角形的邊長和周長
 
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
-
-    FILE *outputFile = fopen("hellogd2.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
+    // 提示用戶輸入三個邊長並存入 'x', 'y', 和 'z'
+    printf("\nInput the first number: ");
+    if (scanf("%f", &amp;x) != 1) {
+        fprintf(stderr, "Error: Invalid input for the first number.\n");
         return 1;
     }
 
-    int red = gdImageColorAllocate(img, 255, 0, 0);
-    int blue = gdImageColorAllocate(img, 0, 0, 255);
-    int black = gdImageColorAllocate(img, 0, 0, 0);
-    int white = gdImageColorAllocate(img, 255, 255, 255);
-
-    gdImageFilledRectangle(img, 0, 0, width, height, white);
-    gdImageFilledRectangle(img, 0, 0, (int)width / 4, (int)height / 4, blue);
-
-    gdImageFilledEllipse(img, (int)width * 3 / 4, (int)height / 4, (int)width / 4, (int)width / 4, red);
-    gdImageEllipse(img, (int)width * 3 / 4, (int)height * 3 / 4, (int)width / 4, (int)width / 4, red);
-    gdImageLine(img, (int)width / 2, (int)height / 2, (int)width / 2, (int)height / 2 + 100, blue);
-
-    gdPoint points[4];
-    points[0].x = (int)width / 4;
-    points[0].y = (int)height * 3 / 4;
-    points[1].x = points[0].x + 100;
-    points[1].y = points[0].y;
-    points[2].x = points[1].x;
-    points[2].y = points[1].y + 100;
-    points[3].x = points[2].x - 100;
-    points[3].y = points[2].y;
-
-    // Call the rotation function multiple times
-    for (int i = 0; i &lt; 4; i++) {
-        rotateFilledPolygon((int)width / 4 + 50, (int)height * 3 / 4 + 50, 30.0, points, 4);
-        gdImagePolygon(img, points, 4, black);
+    printf("\nInput the second number: ");
+    if (scanf("%f", &amp;y) != 1) {
+        fprintf(stderr, "Error: Invalid input for the second number.\n");
+        return 1;
     }
 
-    gdPoint points2[4];
-    points2[0].x = (int)width / 3;
-    points2[0].y = (int)height / 2;
-    points2[1].x = points2[0].x + 100;
-    points2[1].y = points2[0].y;
-    points2[2].x = points2[1].x;
-    points2[2].y = points2[1].y + 100;
-    points2[3].x = points2[2].x - 150;
-    points2[3].y = points2[2].y;
-
-    // Call the rotation function multiple times
-    for (int i = 0; i &lt; 12; i++) {
-        //rotateFilledPolygon((int)width / 3 + 50, (int)height / 2 + 50, 30.0, points2, 4);
-        rotateFilledPolygon(500, 200, 30.0, points2, 4);
-        gdImageFilledPolygon(img, points2, 4, red);
+    printf("\nInput the third number: ");
+    if (scanf("%f", &amp;z) != 1) {
+        fprintf(stderr, "Error: Invalid input for the third number.\n");
+        return 1;
     }
 
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-    gdImageDestroy(img);
+    if (x &lt; (y + z) &amp;&amp; y &lt; (x + z) &amp;&amp; z &lt; (y + x)) // 檢查是否可以構成三角形
+    {
+        P = x + y + z; // 計算周長
+        printf("\nPerimeter  = %.1f\n", P); // 輸出周長
+    } else {
+        printf("Not possible to create a triangle..!"); // 如果無法構成三角形，輸出相應的信息
+    }
 
     return 0;
+}
+</pre>
+<p><img alt="" height="190" src="./../images/螢幕擷取畫面 2023-12-26 205944.png" width="329"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int j, numbers[5], total = 0; // 宣告數組用於存儲 5 個數字和變數用於總和
+
+    // 提示用戶輸入五個數字並存入數組
+    for (j = 0; j &lt; 5; j++) {
+        printf("\nInput the %s number: ", j == 0 ? "first" : (j == 1 ? "second" : (j == 2 ? "third" : (j == 3 ? "fourth" : "fifth"))));
+        if (scanf("%d", &amp;numbers[j]) != 1) {
+            fprintf(stderr, "Error: Invalid input for the %s number.\n", j == 0 ? "first" : (j == 1 ? "second" : (j == 2 ? "third" : (j == 3 ? "fourth" : "fifth"))));
+            return 1;
+        }
+    }
+
+    for (j = 0; j &lt; 5; j++) {
+        if ((numbers[j] % 2) != 0) // 檢查數字是否為奇數
+        {
+            total += numbers[j]; // 將奇數添加到總和中
+        }
+    }
+
+    printf("\nSum of all odd values: %d", total); // 輸出所有奇數的總和
+    return 0;
+}
+</pre>
+<p><img alt="" height="219" src="./../images/螢幕擷取畫面 2023-12-26 210347.png" width="400"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;limits.h&gt;
+
+int divide_two(int dividend_num, int divisor_num) {
+    int sign = (float)dividend_num / divisor_num &gt; 0 ? 1 : -1;
+    unsigned int dvd = dividend_num &gt; 0 ? dividend_num : -dividend_num;
+    unsigned int dvs = divisor_num &gt; 0 ? divisor_num : -divisor_num;
+    unsigned int bit_num[33];
+    unsigned int i = 0;
+    long long d = dvs;
+
+    bit_num[i] = d;
+    while (d &lt;= dvd) {
+        bit_num[++i] = d = d &lt;&lt; 1;
+    }
+    i--;
+
+    unsigned int result = 0;
+    while (dvd &gt;= dvs) {
+        if (dvd &gt;= bit_num[i]) {
+            dvd -= bit_num[i];
+            result += (1 &lt;&lt; i);
+        } else {
+            i--;
+        }
+    }
+
+    if (result &gt; INT_MAX &amp;&amp; sign &gt; 0) {
+        return INT_MAX;
+    }
+    return (int)result * sign;
+}
+
+int main(void) {
+    int dividend_num = 15;
+    int divisor_num = 3;
+    printf("Quotient after dividing %d and %d: %d", dividend_num, divisor_num, divide_two(dividend_num, divisor_num));
+    return 0;
+}
+</pre>
+<p><img alt="" height="49" src="./../images/螢幕擷取畫面 2023-12-26 210627.png" width="391"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+// inline function to check if a given integer is even
+inline int is_even(int n) {
+    return n % 2 == 0;
+}
+
+int main() {
+    int num;
+
+    // 檢查 scanf 的返回值，確保成功讀取一個整數
+    if (scanf("%d", &amp;num) != 1) {
+        fprintf(stderr, "Error: Invalid input. Please enter a valid integer.\n");
+        return 1;
+    }
+
+    if (is_even(num)) {
+        printf("%d is even.\n", num);
+    } else {
+        printf("%d is odd.\n", num);
+    }
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="101" src="./../images/螢幕擷取畫面 2023-12-26 211711.png" width="471"/></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+
+inline float celsius_To_Fahrenheit(float celsius) {
+  return (celsius * 9 / 5) + 32;
+}
+inline float fahrenheit_To_Celsius(float fahrenheit) {
+  return (fahrenheit - 32) * 5 / 9;
+}
+
+int main() {
+  float celsius = 40;
+  float fahrenheit = 89.60;
+  printf("%.2f Celsius is equal to %.2f Fahrenheit\n", celsius, celsius_To_Fahrenheit(celsius));
+  printf("\n%.2f Fahrenheit is equal to %.2f Celsius\n", fahrenheit,
+    fahrenheit_To_Celsius(fahrenheit));
+  return 0;
 }</pre>
-<p><img alt="" height="300" src="./../images/hellogd2.png" width="400"/></p>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><img alt="" height="198" src="./../images/螢幕擷取畫面 2023-12-26 212025.png" width="483"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int a, b;
+
+    // Prompt user for input
+    printf("Input two pairs values (integer values):\n");
+
+    // Read two integer values from user and store them in 'a' and 'b'
+    if (scanf("%d %d", &amp;a, &amp;b) != 2) {
+        fprintf(stderr, "Error: Invalid input. Please enter two integer values.\n");
+        return 1;  // Return an error code for invalid input
+    }
+
+    // Check if 'a' is not equal to 'b'
+    if (a != b) {
+        // Check if 'b' is greater than 'a'
+        if (b &gt; a) {
+            printf("Ascending order\n");  // Print message for ascending order
+        } else {
+            printf("Descending order\n");  // Print message for descending order
+        }
+    }
+
+    return 0;  // End of program
+}
+</pre>
+<p><img alt="" height="266" src="./../images/螢幕擷取畫面 2023-12-26 212847.png" width="493"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main(void) {
+    unsigned char char1, char2, char3, char4, char5, char6, char7, char8;
+
+    // Print table header
+    printf("|---------------------------------------------------------------------------------------------------------|\n");
+    printf("|extended ASCII table - excluding control characters                                                      |\n");
+    printf("|   Ch Dec  Hex  |  Ch Dec  Hex   | Ch Dec  Hex | Ch Dec  Hex  | Ch Dec  Hex  | Ch Dec  Hex | Ch Dec  Hex |\n");
+    printf("|----------------|----------------|-------------|--------------|--------------|-------------|-------------|\n");
+
+    // Loop through characters
+    for (int i = 0; i &lt; 32; i++) {
+        // Calculate characters for different ranges
+        char1 = i;
+        char2 = i + 32;
+        char3 = i + 64;
+        char4 = i + 96;
+        char5 = i + 128;  // extended ASCII characters
+        char6 = i + 160;
+        char7 = i + 192;
+        char8 = i + 224;
+
+        // Print characters and their decimal and hexadecimal representations
+        printf("|  %c %3d %#x ", char2, char2, char2);
+        printf("|  %c %3d %#x ", char3, char3, char3);
+
+        // Special case for DEL character
+        if (char4 == 127) {
+            printf("|%s %3d %#x |", "DEL", char4, char4);
+        } else {
+            printf("|  %c %3d %#x |", char4, char4, char4);
+        }
+
+        // Print extended ASCII characters for the current system.
+        printf("  %c %3d %#x |  %c %3d %#x |  %c %3d %#x |  %c %3d %#x |\n",
+               char5, char5, char5,
+               char6, char6, char6,
+               char7, char7, char7,
+               char8, char8, char8);
+    }
+
+    return 0;  // Indicate successful execution of the program
+}
+</pre>
+<p><img alt="" height="281" src="./../images/螢幕擷取畫面 2023-12-26 213136.png" width="500"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    int x; // Declare variable x
+
+    // Print header for the table
+    printf("x+1\tx+3\tx+5\tx+7\n\n");
+    printf("---------------------------\n");
+
+    // Loop to generate and print table values
+    for (x = 1; x &lt;= 15; x += 3)
+        printf("%d\t%d\t%d\t%d\n", x, (x + 2), (x + 4), (x + 6));
+
+    return 0; // Indicate successful program execution
+}
+</pre>
+<p><img alt="" height="425" src="./../images/螢幕擷取畫面 2023-12-26 213557.png" width="321"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+
+int main() {
+    // 声明变量
+    float principal_amt, rate_of_interest, days, interest;
+    const int yearInDays = 365; // 用于转换利率的常量
+
+    // 提示用户输入贷款金额
+    printf("输入贷款金额 (输入 0 退出): ");
+    if (scanf("%f", &amp;principal_amt) != 1) {
+        fprintf(stderr, "Error: Invalid input for loan amount.\n");
+        return 1;
+    }
+
+    // 主循环用于处理贷款
+    while ((int)principal_amt != 0) 
+    {
+        // 提示用户输入利率
+        printf("输入利率: ");
+        if (scanf("%f", &amp;rate_of_interest) != 1) {
+            fprintf(stderr, "Error: Invalid input for interest rate.\n");
+            return 1;
+        }
+
+        // 提示用户输入贷款期限（天）
+        printf("输入贷款期限（天）: ");
+        if (scanf("%f", &amp;days) != 1) {
+            fprintf(stderr, "Error: Invalid input for loan term.\n");
+            return 1;
+        }
+
+        // 计算利息
+        interest = (principal_amt * rate_of_interest * days) / yearInDays;
+
+        // 显示利息金额
+        printf("利息金额为 $%.2f\n", interest);
+
+        // 提示用户输入下一个贷款金额
+        printf("\n\n输入贷款金额 (输入 0 退出): ");
+        if (scanf("%f", &amp;principal_amt) != 1) {
+            fprintf(stderr, "Error: Invalid input for loan amount.\n");
+            return 1;
+        }
+    }
+
+    return 0;
+}
+</pre>
+<p><img alt="" height="216" src="./../images/螢幕擷取畫面 2023-12-26 214349.png" width="388"/></p>
+<br />課程2 << <a href='課程2.html'>Previous</a> <a href='期末總結.html'>Next</a> >> 期末總結</div>
         
     <!-- footer -->
       <div class="container">
