--- a/config/content.htm
+++ b/config/content.htm
@@ -2915,9 +2915,19 @@ int main() {
 </pre>
 <p><img alt="" height="216" src="/images/螢幕擷取畫面 2023-12-26 214349.png" width="388"/></p>
 <h1>期末總結</h1>
+<p>我覺得我的得分應該有80分，雖然一開始我對這個課程感到絕望也一度放棄，但後面我有想努力通過，我還會熬夜做出來，而且有一次還做到早上7.才做完它讓我很崩潰，但我還是努力做完它了，所以這是我期望的分數，希望可以通過這個科目。</p>
+<p><span>A: 是否</span><span>按照進度明確標示倉儲的改版歷程。是的我有。</span></p>
 <p><strong>B: 是否根據 IPv4 與 IPv6 網路環境設定進行作法討論</strong></p>
 <p><strong><video controls="controls" height="641" width="1000">
 <source src="/images/Network%20settings.mp4" type="video/mp4"/></video></strong></p>
+<p><span>C: 是否就 Replit、s.cycu.org 與 localhost 情境下對個人與分組倉儲進行設定操作</span></p>
+<p><span><video controls="controls" height="641" width="1000">
+<source src="/images/28.mp4" type="video/mp4"/></video></span></p>
+<p><span>D: 是否完成</span><a href="https://mde.tw/cpnote/content/%E4%B8%8A%E8%AA%B2%E5%85%A7%E5%AE%B9.html">上課內容</a><span>中的 Exercises 是的，但是第九周的內容我不太會做</span></p>
+<p><span>E: 是否完成 <a href="https://mde.tw/cpnote/content/w2-w5.html">w2-w5</a><span><span> </span>週任務中的 Exercises。有我有做出來放在個人網站。</span></span></p>
+<p><span>F: 是否完成 <a href="https://mde.tw/cpnote/content/w6-w7.html">w6-w7</a><span><span> </span>週任務中的練習一與練習二。有我有做出來放在個人網站。</span></span></p>
+<p><span><span>G: 是否完成 C 結合 gd 繪圖程式庫, 畫出 <a href="https://en.wikipedia.org/wiki/Flag_of_China">PROC</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_China#/media/File:Flag_of_China_(construction_sheet).svg">規格</a><span>),<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_the_United_Kingdom">United Kingdom</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_the_United_Kingdom#/media/File:Flag_of_the_United_Kingdom_(1-2)_(construction_sheet).svg">規格</a><span>),<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_Japan">Japan</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_Japan#/media/File:Construction_sheet_of_the_Japanese_flag_EN.svg">規格</a><span>)與<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_South_Korea">South Korea</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_South_Korea#/media/File:Flag_of_South_Korea_(construction_sheet).svg">規格</a><span>) Flags。有我有做出來放在個人網站。</span></span></span></p>
+<p><span><span><span>H: 是否完成 w16 Final Project。有我有做出來放在個人網站。</span></span></span></p>
 <p>布萊頓</p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://en.wikipedia.org/wiki/Python_（程式語言）</span></span></span></span></span></span></span></span></span></span></span></span></span></span></a></p>
 <h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">例子：</span></span></span></span></span></span></span></span></span></span></span></span></span></span></h4>
