--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,10 @@
 <h1>關於</h1>
 <p><a href="https://github.com/mdecycu/cmsite"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecycu/cmsite</span></span></span></span></span></span></span></span></span></span></span></span></span></span></a></p>
-<h1>w5</h1>
+<h1>w2-3</h1>
+<p>網路設定</p>
+<p><video controls="controls" height="641" width="1000">
+<source src="/images/Network%20settings.mp4" type="video/mp4"/></video></p>
+<h1>w4-5</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
 // https://blog.csdn.net/weixin_38468077/article/details/101069365
 // http://www.gnuplot.info/demo/
@@ -116,7 +120,7 @@ void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, 
         fromY = toY;
    }
 }</pre>
-<img alt="" height="267" src="/images/roc_flag.png" width="400"/>
+<p><img alt="" height="267" src="/images/roc_flag.png" width="400"/></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// https://en.wikipedia.org/wiki/Flag_of_the_United_States
 // https://www.britannica.com/topic/flag-of-the-United-States-of-America
 // 以下為幾乎要繪製完成的美國國旗, 請修改下列原始碼, 令其繪出正確的美國國旗
@@ -201,7 +205,7 @@ void draw_star(gdImagePtr img, int x, int y, int size, int color) {
     // Fill the star with white color
     gdImageFilledPolygon(img, points, 10, color);
 }</pre>
-<img alt="" height="211" src="/images/usa_flag.png" width="400"/>
+<p><img alt="" height="211" src="/images/usa_flag.png" width="400"/></p>
 <h1>w7</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;gd.h&gt;
@@ -2914,6 +2918,14 @@ int main() {
 <p><strong>B: 是否根據 IPv4 與 IPv6 網路環境設定進行作法討論</strong></p>
 <p><strong><video controls="controls" height="641" width="1000">
 <source src="/images/Network%20settings.mp4" type="video/mp4"/></video></strong></p>
+<p><span>C: 是否就 Replit、s.cycu.org 與 localhost 情境下對個人與分組倉儲進行設定操作</span></p>
+<p><span><video controls="controls" height="641" width="1000">
+<source src="/images/28.mp4" type="video/mp4"/></video></span></p>
+<p><span>D: 是否完成</span><a href="https://mde.tw/cpnote/content/%E4%B8%8A%E8%AA%B2%E5%85%A7%E5%AE%B9.html">上課內容</a><span>中的 Exercises 是的，但是第九周的內容我不太會做</span></p>
+<p><span>E: 是否完成 <a href="https://mde.tw/cpnote/content/w2-w5.html">w2-w5</a><span><span> </span>週任務中的 Exercises。有我有做出來放在個人網站。</span></span></p>
+<p><span>F: 是否完成 <a href="https://mde.tw/cpnote/content/w6-w7.html">w6-w7</a><span><span> </span>週任務中的練習一與練習二。有我有做出來放在個人網站。</span></span></p>
+<p><span><span>G: 是否完成 C 結合 gd 繪圖程式庫, 畫出 <a href="https://en.wikipedia.org/wiki/Flag_of_China">PROC</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_China#/media/File:Flag_of_China_(construction_sheet).svg">規格</a><span>),<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_the_United_Kingdom">United Kingdom</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_the_United_Kingdom#/media/File:Flag_of_the_United_Kingdom_(1-2)_(construction_sheet).svg">規格</a><span>),<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_Japan">Japan</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_Japan#/media/File:Construction_sheet_of_the_Japanese_flag_EN.svg">規格</a><span>)與<span> </span></span><a href="https://en.wikipedia.org/wiki/Flag_of_South_Korea">South Korea</a><span>(</span><a href="https://en.wikipedia.org/wiki/Flag_of_South_Korea#/media/File:Flag_of_South_Korea_(construction_sheet).svg">規格</a><span>) Flags。有我有做出來放在個人網站。</span></span></span></p>
+<p><span><span><span>H: 是否完成 w16 Final Project。有我有做出來放在個人網站。</span></span></span></p>
 <p>布萊頓</p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://en.wikipedia.org/wiki/Python_（程式語言）</span></span></span></span></span></span></span></span></span></span></span></span></span></span></a></p>
 <h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">例子：</span></span></span></span></span></span></span></span></span></span></span></span></span></span></h4>
