--- a/content/w4-5.html
+++ b/content/w4-5.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='.html'></a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程-1.html'>課程-1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程-2.html'>課程-2</a><li><a href='練習.html'>練習</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,242 +142,52 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX<br /><h1></h1>
-<p>第一題</p>
-<p><span>根據 </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EVcefUI2zPpAmP6lnLWLEAoBCBznMnvFpsNE-1VVFGvVZQ?e=goiPpP&amp;isSPOFile=1">roc_list_coord_flag.7z</a><span><span> </span>程式內容所印出的六組 ABED 等繪製 ROC 國旗白日圖案中的菱形四個關鍵點, 請直接在青天與滿地紅的圖案中, 利用白色作為畫線顏色, 將第二組的 ABED 等四個點的座標, 以直線相連.</span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
- 
-void draw_roc_flag(gdImagePtr img);
-void draw_white_sun(gdImagePtr img, int x, int y, int size, int color);
- 
+    <div id="tipue_search_content">w2-3 << <a href='w2-3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w4-5</h1>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
+// https://blog.csdn.net/weixin_38468077/article/details/101069365
+// http://www.gnuplot.info/demo/
+// https://github.com/sysprog21/rv32emu
+// https://github.com/sysprog21/semu 
+// https://docs.google.com/presentation/d/14N0cWG2SnBSqhc2cLF0_2VerB9FF8JN3
+// https://cs61c.org/fa23/
+// https://greenteapress.com/wp/think-python-2e/
+// https://github.com/ecalvadi/c99-examples
+// https://github.com/gouravthakur39/beginners-C-program-examples
+// https://github.com/ergenekonyigit/Numerical-Analysis-Examples
+// https://www.che.ncku.edu.tw/facultyweb/changct/html/teaching/CPPandMATLAB/Past/pdf%20Files/Chap02-Ling.pdf
+// https://gteceducation.com.sg/Brochures/PROGRAMMING/C%20PROGRAMMING%20FULL.pdf
+// https://jsommers.github.io/cbook/cbook.pdf
+// https://jsommers.github.io/cbook/index.html
+// http://student.itee.uq.edu.au/courses/csse2310/CProgrammingNotes.pdf
+// http://cslibrary.stanford.edu/101/EssentialC.pdf
+// https://publications.gbdirect.co.uk/c_book/
+// https://www.fossil-scm.org/fossil-book/doc/2ndEdition/fossilbook.pdf
+// ***** execute on replit 
+// cd downloads
+// cc gnuplot_ex1.c -o gnuplot_ex1
+// ./gnuplot_ex1
+#include &lt;stdio.h&gt;
+
+// 主函式
 int main() {
-    // width 3: height 2
-    int width = 1200;
-    // 國旗長寬比為 3:2
-    int height = (int)(width * 2.0 / 3.0);
- 
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
- 
-    draw_roc_flag(img);
- 
-    FILE *outputFile = fopen("roc_flag_in_gd.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
+    // Start a Gnuplot process using popen
+    FILE *gnuplotPipe = popen("gnuplot -persistent", "w");
+    if (!gnuplotPipe) {
+        fprintf(stderr, "Failed to start Gnuplot.\n");
         return 1;
     }
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-    gdImageDestroy(img);
+
+    // Use Gnuplot plotting commands, specify font and output as PNG
+    fprintf(gnuplotPipe, "set terminal png font 'default,10' size 800,400\n");
+    fprintf(gnuplotPipe, "set output './../images/gnuplot_ex1.png'\n");
+    fprintf(gnuplotPipe, "plot sin(x)");
+    // Close popen
+    pclose(gnuplotPipe);
+
     return 0;
-}
- 
-void draw_roc_flag(gdImagePtr img) {
-    int width = gdImageSX(img);
-    int height = gdImageSY(img);
-    int red, white, blue;
- 
-    // 白日位於青天面積正中央, 因此中心點座標為長寬各 1/4 處
-    int center_x = (int)(width / 4);
-    int center_y = (int)(height / 4);
- 
-    int sun_radius = (int)(width / 8);
-    int white_circle_dia = sun_radius;
-    int blue_circle_dia = white_circle_dia + white_circle_dia * 2 / 15;
- 
-    red = gdImageColorAllocate(img, 255, 0, 0); // 紅色
-    white = gdImageColorAllocate(img, 255, 255, 255); // 白色
-    blue = gdImageColorAllocate(img, 0, 0, 149); // 藍色
- 
-    gdImageFilledRectangle(img, 0, 0, width, height, red);
-    gdImageFilledRectangle(img, 0, 0, (int)(width / 2.0), (int)(height / 2.0), blue);
-    draw_white_sun(img, center_x, center_y, sunS_radius, white);
-    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
-    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
- 
-    // 在青天與滿地紅的圖案中以白色畫線繪製連接菱形的四個關鍵點
-    gdImageSetThickness(img, 10); // 設置線條粗度為10
-    gdImageLine(img, 429, 125, 279, 165, white);
-    gdImageLine(img, 279, 165, 170, 274, white);
-    gdImageLine(img, 170, 274, 170, 274, white);
-    gdImageLine(img, 429, 125, 170, 274, white); // 加入第四條連線
-}
-void draw_white_sun(gdImagePtr img, int x, int y, int size, int color) {
-    // 實現 draw_white_sun 函數的內容
-    // 可以在此處繪製白日的內部圖案
-}
-</pre>
-<p>第二題</p>
-<p><span>請列出第二組 ABED 的四條直線與白日中的大圓所相交 (intersect) 的四個點座標.</span></p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
-#include &lt;gd.h&gt;
-#include &lt;math.h&gt;
-
-// 定義座標結構
-typedef struct {
-    double x;
-    double y;
-} Point;
-
-void draw_roc_flag(gdImagePtr img);
-void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, int color);
-
-// 計算圓與線的交點
-void circleLineIntersection(double h, double k, double r, double x1, double y1, double x2, double y2);
-
-int main() {
-    // 設定圖片寬度和高度
-    int width = 1200;
-    int height = (int)(width * 2.0 / 3.0);
-
-    gdImagePtr img = gdImageCreateTrueColor(width, height);
-    gdImageAlphaBlending(img, 0);
-
-    draw_roc_flag(img);
-
-    FILE *outputFile = fopen("roc_flag_in_gd.png", "wb");
-    if (outputFile == NULL) {
-        fprintf(stderr, "Error opening the output file.\n");
-        return 1;
-    }
-    gdImagePngEx(img, outputFile, 9);
-    fclose(outputFile);
-    gdImageDestroy(img);
-    return 0;
-}
-
-void draw_roc_flag(gdImagePtr img) {
-    int width = gdImageSX(img);
-    int height = gdImageSY(img);
-    int red, white, blue;
-    int center_x = (int)(width / 4);
-    int center_y = (int)(height / 4);
-    int sun_radius = (int)(width / 8);
-    int white_circle_dia = sun_radius;
-    int blue_circle_dia = white_circle_dia + white_circle_dia * 2 / 15;
-    red = gdImageColorAllocate(img, 255, 0, 0);
-    white = gdImageColorAllocate(img, 255, 255, 255);
-    blue = gdImageColorAllocate(img, 0, 0, 149);
-
-    gdImageFilledRectangle(img, 0, 0, width, height, red);
-    gdImageFilledRectangle(img, 0, 0, (int)(width / 2.0), (int)(height / 2.0), blue);
-
-    draw_white_sun(img, center_x, center_y, sun_radius, white);
-
-    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
-    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
-
-    // 連接第二組ABED的白線
-    int ax = 429;
-    int ay = 125;
-    int bx = 279;
-    int by = 165;
-    int ex = 170;
-    int ey = 274;
-    int dx = 170;
-    int dy = 274;
-
-    // 設定線條寬度
-    gdImageSetThickness(img, 3);
-
-    gdImageLine(img, ax, ay, bx, by, white);
-    gdImageLine(img, bx, by, ex, ey, white);
-    gdImageLine(img, ex, ey, dx, dy, white);
-    gdImageLine(img, dx, dy, ax, ay, white);
-
-    // 新增連線 (ax, ay) 到 (dx, dy)
-    gdImageLine(img, ax, ay, dx, dy, white);
-
-    // 恢復預設線條寬度
-    gdImageSetThickness(img, 1);
-
-    // 利用一個藍色大圓與白色小圓畫出藍色環狀
-    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
-    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
-
-    // 圓的參數
-    double circle_x = (int)(width / 4); // 圓心 x 座標
-    double circle_y = (int)(height / 4); // 圓心 y 座標
-    double radius = white_circle_dia + white_circle_dia * 2 / 15; // 圓半徑
-
-    // 兩點座標
-    double x3 = 170;
-    double y3 = 274;
-    double x4 = 279;
-    double y4 = 165;
-
-    // 計算圓與線段 (x3, y3) 到 (x4, y4) 的交點
-    circleLineIntersection(circle_x, circle_y, radius, x4, y4, x3, y3);
-
-    double x5 = 279;
-    double y5 = 165;
-    double x6 = 429;
-    double y6 = 125;
-
-    // 計算圓與線段 (x6, y6) 到 (x5, y5) 的交點
-    circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5);
-}
-
-void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, int color) {
-    float deg = M_PI / 180;
-    float sr = sun_radius / tan(75 * deg);
-    int ax, ay, bx, by, dx, dy, ex, ey;
-    gdPoint points[4];
-
-    ax = center_x;
-    ay = center_y - sun_radius;
-    bx = center_x - sun_radius * tan(15 * deg);
-    by = center_y;
-    ex = center_x;
-    ey = center_y + sun_radius;
-    dx = center_x + sun_radius * tan(15 * deg);
-    dy = center_y;
-
-    for (int i = 1; i &lt;= 6; i++) {
-        points[0].x = ax + sun_radius * sin(30 * deg * i);
-        points[0].y = ay + sun_radius - sun_radius * cos(30 * deg * i);
-
-        points[1].x = bx + sr - sr * cos(30 * deg * i);
-        points[1].y = by - sr * sin(30 * deg * i);
-
-        points[2].x = ex - sun_radius * sin(30 * deg * i);
-        points[2].y = ey - (sun_radius - sun_radius * cos(30 * deg * i));
-
-        points[3].x = dx - (sr - sr * cos(30 * deg * i));
-        points[3].y = dy + sr * sin(30 * deg * i);
-
-        gdImageFilledPolygon(img, points, 4, color);
-        gdImagePolygon(img, points, 4, color);
-    }
-}
-
-void circleLineIntersection(double h, double k, double r, double x1, double y1, double x2, double y2) {
-    double m = (y2 - y1) / (x2 - x1);
-    double b = y1 - m * x1;
-    double A = 1 + pow(m, 2);
-    double B = 2 * (m * b - m * k - h);
-    double C = pow(k, 2) - pow(r, 2) + pow(h, 2) - 2 * b * k + pow(b, 2);
-
-    double discriminant = pow(B, 2) - 4 * A * C;
-    if (discriminant &gt; 0) {
-        double x_intersect1 = (-B + sqrt(discriminant)) / (2 * A);
-        double y_intersect1 = m * x_intersect1 + b;
-        printf("交點: (%.2f, %.2f)\n", x_intersect1, y_intersect1);
-
-        double x_intersect2 = (-B - sqrt(discriminant)) / (2 * A);
-        double y_intersect2 = m * x_intersect2 + b;
-        printf("交點: (%.2f, %.2f)\n", x_intersect2, y_intersect2);
-    } else if (discriminant == 0) {
-        double x_intersect = -B / (2 * A);
-        double y_intersect = m * x_intersect + b;
-        printf("交點: (%.2f, %.2f)\n", x_intersect, y_intersect);
-    } else {
-        printf("No points.\n");
-    }
 }</pre>
-<br />w15 << <a href='w15.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX</div>
+<p><br/><img alt="" height="200" src="./../images/gnuplot_ex1.png" width="400"/> </p>
+<br />w2-3 << <a href='w2-3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
       <div class="container">
