--- a/content/w6.html
+++ b/content/w6.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='.html'></a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程-1.html'>課程-1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程-2.html'>課程-2</a><li><a href='練習.html'>練習</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,52 +142,164 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w6</h1>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
-// https://blog.csdn.net/weixin_38468077/article/details/101069365
-// http://www.gnuplot.info/demo/
-// https://github.com/sysprog21/rv32emu
-// https://github.com/sysprog21/semu 
-// https://docs.google.com/presentation/d/14N0cWG2SnBSqhc2cLF0_2VerB9FF8JN3
-// https://cs61c.org/fa23/
-// https://greenteapress.com/wp/think-python-2e/
-// https://github.com/ecalvadi/c99-examples
-// https://github.com/gouravthakur39/beginners-C-program-examples
-// https://github.com/ergenekonyigit/Numerical-Analysis-Examples
-// https://www.che.ncku.edu.tw/facultyweb/changct/html/teaching/CPPandMATLAB/Past/pdf%20Files/Chap02-Ling.pdf
-// https://gteceducation.com.sg/Brochures/PROGRAMMING/C%20PROGRAMMING%20FULL.pdf
-// https://jsommers.github.io/cbook/cbook.pdf
-// https://jsommers.github.io/cbook/index.html
-// http://student.itee.uq.edu.au/courses/csse2310/CProgrammingNotes.pdf
-// http://cslibrary.stanford.edu/101/EssentialC.pdf
-// https://publications.gbdirect.co.uk/c_book/
-// https://www.fossil-scm.org/fossil-book/doc/2ndEdition/fossilbook.pdf
-// ***** execute on replit 
-// cd downloads
-// cc gnuplot_ex1.c -o gnuplot_ex1
-// ./gnuplot_ex1
+    <div id="tipue_search_content">w4-5 << <a href='w4-5.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w6</h1>
+<p><span>未完成的台灣國旗</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">// https://en.wikipedia.org/wiki/Flag_of_the_Republic_of_China
+// cc roc_flag.c -lgd -lm to link with gd and math library
+// https://www.rapidtables.com/web/color/RGB_Color.html
+// 幾何形狀著色與繪圖練習
+// 以下 gd 繪圖程式嘗試畫出 ROC 國旗, 請根據下列程式內容完成後續的國旗繪圖
 #include &lt;stdio.h&gt;
-
-// 主函式
+#include &lt;gd.h&gt;
+#include &lt;math.h&gt;
+  
+void draw_roc_flag(gdImagePtr img);
+void draw_white_sun(gdImagePtr img, int x, int y, int size, int color);
+  
 int main() {
-    // Start a Gnuplot process using popen
-    FILE *gnuplotPipe = popen("gnuplot -persistent", "w");
-    if (!gnuplotPipe) {
-        fprintf(stderr, "Failed to start Gnuplot.\n");
+    // width 3: height 2
+    int width = 1200;
+    int height = (int)(width*2.0 / 3.0);
+  
+    gdImagePtr img = gdImageCreateTrueColor(width, height);
+    gdImageAlphaBlending(img, 0);
+  
+    draw_roc_flag(img);
+  
+    FILE *outputFile = fopen("./../images/roc_flag.png", "wb");
+    if (outputFile == NULL) {
+        fprintf(stderr, "Error opening the output file.\n");
         return 1;
     }
-
-    // Use Gnuplot plotting commands, specify font and output as PNG
-    fprintf(gnuplotPipe, "set terminal png font 'default,10' size 800,400\n");
-    fprintf(gnuplotPipe, "set output './../images/gnuplot_ex1.png'\n");
-    fprintf(gnuplotPipe, "plot sin(x)");
-    // Close popen
-    pclose(gnuplotPipe);
-
+    gdImagePngEx(img, outputFile, 9);
+    fclose(outputFile);
+    gdImageDestroy(img);
     return 0;
+}
+  
+void draw_roc_flag(gdImagePtr img) {
+    int width = gdImageSX(img);
+    int height = gdImageSY(img);
+    int red, white, blue;
+    int center_x = (int)(width/4);
+    int center_y = (int)(height/4);
+    int sun_radius = (int)(width/8);
+    // Colors for the flag
+    red = gdImageColorAllocate(img, 242, 0, 0); // Red color
+    white = gdImageColorAllocate(img, 255, 255, 255); // White stripes
+    blue = gdImageColorAllocate(img, 0, 41, 204); // Blue
+    // red rectangle area
+    gdImageFilledRectangle(img, 0, 0, width, height, red);
+    // blue rectangle area
+    gdImageFilledRectangle(img, 0, 0, (int)(width/2.0), (int)(height/2.0), blue);
+    // 目前僅畫出青天白日的輪廓直線, 請嘗試計算所需的點座標完成國旗繪圖
+    draw_white_sun(img, center_x, center_y, sun_radius, white);
+}
+  
+void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, int color) {
+    float angle = 0;
+    int fromX, fromY;
+    int toX, toY;
+    for (int i=0; i&lt;24; i++){
+        angle += 5*M_PI*2/12;
+        //printf("%.3f", angle);
+        toX = center_x + cos(angle)*sun_radius;
+        toY = center_y + sin(angle)*sun_radius;
+        // 只有 i 為 0 時移動到 toX, toY, 其餘都進行直線繪圖
+        if (i!=0){
+            gdImageLine(img, fromX, fromY, toX, toY, color);
+        }
+        fromX = toX;
+        fromY = toY;
+   }
 }</pre>
-<p><br/><img alt="" height="200" src="./../images/gnuplot_ex1.png" width="400"/> </p>
-<br />關於 << <a href='關於.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+<p><img alt="" height="267" src="./../images/roc_flag.png" width="400"/></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// https://en.wikipedia.org/wiki/Flag_of_the_United_States
+// https://www.britannica.com/topic/flag-of-the-United-States-of-America
+// 以下為幾乎要繪製完成的美國國旗, 請修改下列原始碼, 令其繪出正確的美國國旗
+#include &lt;stdio.h&gt;
+#include &lt;gd.h&gt;
+#include &lt;math.h&gt;
+  
+void draw_usa_flag(gdImagePtr img);
+void draw_star(gdImagePtr img, int x, int y, int size, int color);
+  
+int main() {
+    int width = 800;
+    int height = (int)(width / 1.9);
+  
+    gdImagePtr img = gdImageCreateTrueColor(width, height);
+    gdImageAlphaBlending(img, 0);
+  
+    draw_usa_flag(img);
+  
+    FILE *outputFile = fopen("./../images/usa_flag.png", "wb");
+    if (outputFile == NULL) {
+        fprintf(stderr, "Error opening the output file.\n");
+        return 1;
+    }
+  
+    gdImagePngEx(img, outputFile, 9);
+    fclose(outputFile);
+    gdImageDestroy(img);
+  
+    return 0;
+}
+  
+void draw_usa_flag(gdImagePtr img) {
+    int width = gdImageSX(img);
+    int height = gdImageSY(img);
+    int red, white, blue;
+    // Colors for the flag
+    red = gdImageColorAllocate(img, 178, 34, 52); // Red stripes
+    white = gdImageColorAllocate(img, 255, 255, 255); // White stripes
+    blue = gdImageColorAllocate(img, 60, 59, 110); // Blue field
+  
+    int stripe_height = height / 13;
+    int stripe_width = width;
+    int star_size = (int)(0.0308 * height); // Corrected star size (half the original size)
+  
+    for (int y = 0; y &lt; height; y += stripe_height) {
+        if (y / stripe_height % 2 == 0) {
+            gdImageFilledRectangle(img, 0, y, stripe_width, y + stripe_height, red);
+        } else {
+            gdImageFilledRectangle(img, 0, y, stripe_width, y + stripe_height, white);
+        }
+    }
+  
+    gdImageFilledRectangle(img, 0, 0, width * 2 / 5, stripe_height * 7, blue);
+  
+    int star_spacing_x = (int)(0.063 * height); // Horizontal spacing between stars
+    int star_spacing_y = (int)(0.054 * height); // Vertical spacing between stars
+    int star_start_x = (int)(0.0616 * height); // Starting X position for stars
+    int star_start_y = (int)(0.0485 * height); // Starting Y position for stars
+  
+    for (int row = 0; row &lt; 9; row++) {
+        int starsPerRow = (row % 2 == 0) ? 6 : 5;
+  
+        for (int star = 0; star &lt; starsPerRow; star++) {
+            int x = star_start_x + star * star_spacing_x;
+            int y = star_start_y + row * star_spacing_y;
+            draw_star(img, x, y, star_size, white);
+        }
+    }
+}
+  
+void draw_star(gdImagePtr img, int x, int y, int size, int color) {
+    gdPoint points[10];
+  
+    for (int i = 0; i &lt; 10; i++) {
+        double angle = M_PI / 2 + i * 2 * M_PI / 10;
+        int radius = (i % 2 == 0) ? size : size / 2;
+        points[i].x = x + radius * cos(angle);
+        points[i].y = y + radius * sin(angle);
+    }
+  
+    // Fill the star with white color
+    gdImageFilledPolygon(img, points, 10, color);
+}</pre>
+<p><img alt="" height="211" src="./../images/usa_flag.png" width="400"/></p>
+<br />w4-5 << <a href='w4-5.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
