--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2915,6 +2915,8 @@ int main() {
 </pre>
 <p><img alt="" height="216" src="/images/螢幕擷取畫面 2023-12-26 214349.png" width="388"/></p>
 <h1>期末總結</h1>
+<p>我覺得我的得分應該有80分，雖然一開始我對這個課程感到絕望也一度放棄，但後面我有想努力通過，我還會熬夜做出來，而且有一次還做到早上7.才做完它讓我很崩潰，但我還是努力做完它了，所以這是我期望的分數，希望可以通過這個科目。</p>
+<p><span>A: 是否</span><span>按照進度明確標示倉儲的改版歷程。是的我有。</span></p>
 <p><strong>B: 是否根據 IPv4 與 IPv6 網路環境設定進行作法討論</strong></p>
 <p><strong><video controls="controls" height="641" width="1000">
 <source src="/images/Network%20settings.mp4" type="video/mp4"/></video></strong></p>
