--- a/config/content.htm
+++ b/config/content.htm
@@ -1441,7 +1441,7 @@ int main() {
 <h2>課程1</h2>
 <p><video controls="controls" height="641" width="1000">
 <source src="/images/12.mp4" type="video/mp4"/></video></p>
-<p><br/><span style="vertical-align: inherit;"></span></p>
+<p>2<span style="vertical-align: inherit;"></span></p>
 <p><span style="vertical-align: inherit;">1.</span></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 
@@ -1894,8 +1894,7 @@ return 0;
 }
 
 </pre>
-<p><img alt="" height="147" src="/images/螢幕擷取畫面 2023-12-21 131906.png" width="500"/></p>
-<h2>練習1</h2>
+<p><img alt="" height="147" src="/images/螢幕擷取畫面 2023-12-21 131906.png" width="500"/></p><h2>練習1</h2>
 <p>1.</p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">/* =========================
  struct – 3.
