--- a/content/課程1.html
+++ b/content/課程1.html
@@ -145,7 +145,7 @@ img.add_border {
     <div id="tipue_search_content">cEX << <a href='cEX.html'>Previous</a> <a href='練習1.html'>Next</a> >> 練習1<br /><h1>課程1</h1>
 <p><video controls="controls" height="641" width="1000">
 <source src="./../images/12.mp4" type="video/mp4"/></video></p>
-<p><br/><span style="vertical-align: inherit;"></span></p>
+<p>2<span style="vertical-align: inherit;"></span></p>
 <p><span style="vertical-align: inherit;">1.</span></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 
@@ -598,8 +598,7 @@ return 0;
 }
 
 </pre>
-<p><img alt="" height="147" src="./../images/螢幕擷取畫面 2023-12-21 131906.png" width="500"/></p>
-<br />cEX << <a href='cEX.html'>Previous</a> <a href='練習1.html'>Next</a> >> 練習1</div>
+<p><img alt="" height="147" src="./../images/螢幕擷取畫面 2023-12-21 131906.png" width="500"/></p><br />cEX << <a href='cEX.html'>Previous</a> <a href='練習1.html'>Next</a> >> 練習1</div>
         
     <!-- footer -->
       <div class="container">
