--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1281,154 +1281,162 @@ void draw_white_sun(gdImagePtr img, int x, int y, int size, int color) {
 }
 </pre>
 <p><span>2.</span><span>承上題, 請列出第二組 ABED 的四條直線與白日中的大圓所相交 (intersect) 的四個點座標.</span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// https://en.wikipedia.org/wiki/Flag_of_the_Republic_of_China 
-// 內政部國旗參考資料: https://www.moi.gov.tw/cp.aspx?n=10621 
-// cc roc_flag_in_gd.c -lgd -lm to link with gd and math library 
-// https://www.rapidtables.com/web/color/RGB_Color.html 
-// 幾何形狀著色與繪圖練習 
-// 以下 gd 繪圖程式嘗試畫出 ROC 國旗, 請根據下列程式內容完成後續的國旗繪圖 
-#include &lt;stdio.h&gt; 
-#include &lt;gd.h&gt; 
-#include &lt;math.h&gt; 
+<h1>w16</h1>
+<p>第一題</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;gd.h&gt;
  
-void draw_roc_flag(gdImagePtr img); 
-void draw_white_sun(gdImagePtr img, int x, int y, int size, int color); 
+// Function to draw the mass-spring-damper system
+void draw_system(const char* filename) {
+    int width = 600;
+    int height = 300;
+    int x_margin = 50;
+    int y_margin = 50;
+    int mass_radius = 20;
+    int spring_width = 4;
+    int damper_width = 4;
  
-int main() { 
-    // width 3: height 2 
-    int width = 1200; 
-    // 國旗長寬比為 3:2 
-    int height = (int)(width*2.0 / 3.0); 
+    gdImagePtr img = gdImageCreate(width, height);
+    int background_color = gdImageColorAllocate(img, 255, 255, 255);
+    int mass_color = gdImageColorAllocate(img, 0, 0, 0);
+    int spring_color = gdImageColorAllocate(img, 0, 0, 0);
+    int damper_color = gdImageColorAllocate(img, 0, 0, 0);
+    int wall_color = gdImageColorAllocate(img, 0, 0, 0);
  
-    gdImagePtr img = gdImageCreateTrueColor(width, height); 
-    gdImageAlphaBlending(img, 0); 
+    // Draw left wall
+    gdImageLine(img, x_margin, y_margin, x_margin, height - y_margin, wall_color);
  
-    draw_roc_flag(img); 
+    // Draw mass 1
+    int x1 = x_margin + 2 * mass_radius;
+    int y1 = height / 2;
+    gdImageFilledEllipse(img, x1, y1, mass_radius, mass_radius, mass_color);
  
-    FILE *outputFile = fopen("roc_flag_in_gd.png", "wb"); 
-    if (outputFile == NULL) { 
-        fprintf(stderr, "Error opening the output file.\n"); 
-        return 1; 
-    } 
-    gdImagePngEx(img, outputFile, 9); 
-    fclose(outputFile); 
-    gdImageDestroy(img); 
-    return 0; 
-} 
-void draw_roc_flag(gdImagePtr img) { 
-    int width = gdImageSX(img); 
-    int height = gdImageSY(img); 
-    int red, white, blue; 
-    // 白日位於青天面積正中央, 因此中心點座標為長寬各 1/4 處 
-    int center_x = (int)(width/4); 
-    int center_y = (int)(height/4); 
-    // gdImageFilledEllipse 需以長寬方向的 diameter 作圖 
-    // 由於中央白日圓形的半徑為青天寬度的 1/8 
-    // 因此中央白日圓形的直徑為青天寬度的 1/4, 也就是國旗寬度的 1/8 
-    // 而且白日十二道光芒的外圍圓形其半徑也是國旗寬度的1/8 
-    int sun_radius = (int)(width/8); 
-    // 中央白日圓形的直徑等於十二道光芒外圍圓形的半徑 
-    int white_circle_dia = sun_radius; 
-    // 中央藍色圓形半徑為中央白日的 1又 2/15 
-    int blue_circle_dia = white_circle_dia +  white_circle_dia*2/15; 
-    // 根據 https://www.moi.gov.tw/cp.aspx?n=10621 訂定國旗三種顏色值 
-    red = gdImageColorAllocate(img, 255, 0, 0); // 紅色 
-    white = gdImageColorAllocate(img, 255, 255, 255); // 白色 
-    blue = gdImageColorAllocate(img, 0, 0, 149); // 藍色 
-    // 根據畫布大小塗上紅色長方形區域 
-    gdImageFilledRectangle(img, 0, 0, width, height, red); 
-    // 青天面積為整面國旗的 1/4, 也是採用長方形塗色 
-    gdImageFilledRectangle(img, 0, 0, (int)(width/2.0), (int)(height/2.0), blue); 
-  {int x1 = 429; 
-   int y1 = 125; 
-   int x2 = 279; 
-   int y2 = 165; 
-   gdImageSetThickness(img, 10); // 設置線條寬度為10
-   gdImageLine(img, x1, y1, x2, y2, white); // 畫線
-   // 畫一條線連接兩個點 
-   gdImageLine(img, x1, y1, x2, y2, white); 
-  } 
-  {int x1 = 170; 
-     int y1 = 274; 
-     int x2 = 279; 
-     int y2 = 165; 
+    // Draw spring 1
+    int spring1_start_x = x_margin;
+    int spring1_end_x = x1 - mass_radius;
+    int spring1_y = y1;
+    gdImageLine(img, spring1_start_x, spring1_y, spring1_end_x, spring1_y, spring_color);
+    gdImageSetThickness(img, spring_width);
+    gdImageLine(img, spring1_start_x, spring1_y, spring1_end_x, spring1_y, spring_color);
+    gdImageSetThickness(img, 1);
  
-     // 畫一條線連接兩個點 
-     gdImageLine(img, x1, y1, x2, y2, white); 
-  } 
-  { 
-    int x1 = 170; 
-     int y1 = 274; 
-     int x2 = 429; 
-     int y2 = 125; 
+    // Draw damper 1
+    int damper1_start_x = x_margin / 2;
+    int damper1_end_x = x1 - mass_radius;
+    int damper1_y = y1;
+    gdImageLine(img, damper1_start_x, damper1_y, damper1_end_x, damper1_y, damper_color);
+    gdImageSetThickness(img, damper_width);
+    gdImageLine(img, damper1_start_x, damper1_y, damper1_end_x, damper1_y, damper_color);
+    gdImageSetThickness(img, 1);
  
-     // 畫一條線連接兩個點 
-     gdImageLine(img, x1, y1, x2, y2, white); 
-  } 
-  // 利用一個藍色大圓與白色小圓畫出藍色環狀 
-  gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue); 
-  gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white); 
+    // Draw mass 2
+    int x2 = width - x_margin - 2 * mass_radius;
+    int y2 = height / 2;
+    gdImageFilledEllipse(img, x2, y2, mass_radius, mass_radius, mass_color);
  
+    // Draw spring 2
+    int spring2_start_x = x2 + mass_radius;
+    int spring2_end_x = width - x_margin;
+    int spring2_y = y2;
+    gdImageLine(img, spring2_start_x, spring2_y, spring2_end_x, spring2_y, spring_color);
+    gdImageSetThickness(img, spring_width);
+    gdImageLine(img, spring2_start_x, spring2_y, spring2_end_x, spring2_y, spring_color);
+    gdImageSetThickness(img, 1);
  
-  // 定義座標結構 
-  typedef struct { 
-      double x; 
-      double y; 
-  } Point; 
+    // Draw damper 2
+    int damper2_start_x = width - x_margin + mass_radius;
+    int damper2_end_x = x2 + mass_radius;
+    int damper2_y = y2;
+    gdImageLine(img, damper2_start_x, damper2_y, damper2_end_x, damper2_y, damper_color);
+    gdImageSetThickness(img, damper_width);
+    gdImageLine(img, damper2_start_x, damper2_y, damper2_end_x, damper2_y, damper_color);
+    gdImageSetThickness(img, 1);
  
-  // 計算圓與線的交點 
-  void circleLineIntersection(double h, double k, double r, double x1, double y1, double x2, double y2) { 
-      // 直線斜率 
-      double m = (y2 - y1) / (x2 - x1); 
+    // Draw right wall
+    gdImageLine(img, width - x_margin, y_margin, width - x_margin, height - y_margin, wall_color);
  
-      // 直線方程式中的常數項 
-      double b = y1 - m * x1; 
+    // Save the image to a file
+    FILE *output_file = fopen(filename, "wb");
+    gdImagePng(img, output_file);
+    fclose(output_file);
  
-      // 圓與直線交點的計算 
-      double A = 1 + pow(m, 2); 
-      double B = 2 * (m * b - m * k - h); 
-      double C = pow(k, 2) - pow(r, 2) + pow(h, 2) - 2 * b * k + pow(b, 2); 
+    // Free the memory used by the image
+    gdImageDestroy(img);
+}
  
-      // 判斷交點個數 
-    double discriminant = pow(B, 2) - 4 * A * C; 
-    if (discriminant &gt; 0) { 
-        double x_intersect1 = (-B + sqrt(discriminant)) / (2 * A); 
-        double y_intersect1 = m * x_intersect1 + b; 
-        printf("交點: (%.2f, %.2f)\n", x_intersect1, y_intersect1); 
+int main() {
+    draw_system("mass_spring_damper_system.png");
+    return 0;
+}</pre>
+<p>第二題</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
  
-        double x_intersect2 = (-B - sqrt(discriminant)) / (2 * A); 
-        double y_intersect2 = m * x_intersect2 + b; 
-        printf("交點: (%.2f, %.2f)\n", x_intersect2, y_intersect2); 
-    } else if (discriminant == 0) { 
-        double x_intersect = -B / (2 * A); 
-        double y_intersect = m * x_intersect + b; 
-        printf("交點: (%.2f, %.2f)\n", x_intersect, y_intersect); 
-    } else { 
-        printf("No points.\n"); 
-    } 
+// System parameters
+#define M1 2.0
+#define M2 3.0
+#define K1 0.5
+#define K2 1.0
+#define K3 15.0
+#define C1 0.25
+#define C2 0.33
+#define C3 0.5
  
-  } 
-      // 圓的參數 
-      double circle_x = (int)(width/4); // 圓心 x 座標 
-      double circle_y = (int)(height/4); // 圓心 y 座標 
-      double radius = white_circle_dia +  white_circle_dia*2/15; // 圓半徑 
-      // 兩點座標 
-  double x3 = 170; 
-  double y3 = 274; 
-  double x4 = 279; 
-  double y4 = 165; 
+// Function to calculate the derivative of the state
+void calculate_derivative(double t, double state[4], double derivative[4]) {
+    derivative[0] = state[2];  // dx1/dt = v1
+    derivative[1] = state[3];  // dx2/dt = v2
  
-  circleLineIntersection(circle_x, circle_y, radius, x4, y4, x3, y3); 
+    double delta_x = state[0] - state[1];
  
-  double x5 = 279; 
-  double y5 = 165; 
-  double x6 = 429; 
-  double y6 = 125; 
+    // dv1/dt
+    derivative[2] = -(K1 * state[0] + K2 * delta_x) / M1;
  
-  circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5); 
-  }
-</pre>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"></pre>
+    // dv2/dt
+    derivative[3] = -(K3 * state[1] - K2 * delta_x) / M2;
+}
+ 
+// Euler's Method for solving the system
+void euler_method(double t_initial, double t_final, double dt, double initial_conditions[4]) {
+    FILE *output_file;
+    output_file = fopen("trajectory_data.txt", "w");
+ 
+    double t = t_initial;
+    double state[4];
+    for (int i = 0; i &lt; 4; ++i) {
+        state[i] = initial_conditions[i];
+    }
+ 
+    while (t &lt;= t_final) {
+        fprintf(output_file, "%f %f %f %f %f\n", t, state[0], state[1], state[2], state[3]);
+ 
+        double derivative[4];
+        calculate_derivative(t, state, derivative);
+ 
+        for (int i = 0; i &lt; 4; ++i) {
+            state[i] += derivative[i] * dt;
+        }
+ 
+        t += dt;
+    }
+ 
+    fclose(output_file);
+}
+ 
+int main() {
+    // Define the initial conditions
+    double initial_conditions[4] = {1.0, -0.5, 0.0, 0.0};  // x1, x2, v1, v2
+ 
+    // Time parameters
+    double t_initial = 0.0;
+    double t_final = 10.0;
+    double dt = 0.01;
+ 
+    // Solve the system using Euler's Method
+    euler_method(t_initial, t_final, dt, initial_conditions);
+ 
+    return 0;
+}</pre>
+<img alt="" height="300" src="/images/trajectory_plot.png" width="400"/>
 <h1>cEX</h1>
 <h2>課程1</h2>
 <p><video controls="controls" height="641" width="1000">
