--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -149,8 +149,8 @@ img.add_border {
 <p><strong><video controls="controls" height="641" width="1000">
 <source src="./../images/Network%20settings.mp4" type="video/mp4"/></video></strong></p>
 <p><span>C: 是否就 Replit、s.cycu.org 與 localhost 情境下對個人與分組倉儲進行設定操作</span></p>
-<p><span><video controls="controls" height="641" width="1000">
-<source src="./../images/28.mp4" type="video/mp4"/></video></span></p>
+<p><video controls="controls" height="641" width="1000">
+<source src="./../images/20.mp4" type="video/mp4"/></video></p>
 <p><span>D: 是否完成</span><a href="https://mde.tw/cpnote/content/%E4%B8%8A%E8%AA%B2%E5%85%A7%E5%AE%B9.html">上課內容</a><span>中的 Exercises 是的，但是第九周的內容我不太會做</span></p>
 <p><span>E: 是否完成 <a href="https://mde.tw/cpnote/content/w2-w5.html">w2-w5</a><span><span> </span>週任務中的 Exercises。有我有做出來放在個人網站。</span></span></p>
 <p><span>F: 是否完成 <a href="https://mde.tw/cpnote/content/w6-w7.html">w6-w7</a><span><span> </span>週任務中的練習一與練習二。有我有做出來放在個人網站。</span></span></p>
